@startuml

title Jewie Class Diagram

class Piece {
    name
    catalogPrice
}

abstract class Bunch {
    qty
}
class SoldBunch extends Bunch
abstract class ModifiableBunch extends Bunch {
    modifyQty(delta)
}
abstract class UsableBunch extends ModifiableBunch {
    abstract sell(n)
    abstract getSaleBuilder()
}
class SuspendedBunch extends Bunch
SuspendedBunch "1"--"1" UsableBunch

class OwnedBunch extends UsableBunch
class ConsignedBunch extends UsableBunch

abstract class Sale {
    value
    abstract getRevenue()
}
class OwnedSale extends Sale
class ConsignedSale extends Sale

abstract class SaleBuilder

abstract class Origin
class ReceivedBunch
Bunch <|-- ReceivedBunch
class Consigned extends Origin {
    applyCommission(value)
}
class Purchase extends Origin {
    getPrice()
}

Piece "1"--"*" Bunch

SaleBuilder <|-- ConsignedSaleBuilder
SaleBuilder <|-- OwnedSaleBuilder

OwnedSaleBuilder ..> OwnedSale
ConsignedSaleBuilder ..> ConsignedSale
OwnedBunch ..> OwnedSaleBuilder
ConsignedBunch ..> ConsignedSaleBuilder

Consigned "1"--"*" ConsignedBunch
Purchase "*"--"*" OwnedBunch

Origin "1"--"*" ReceivedBunch

Sale "1"--"*" SoldBunch

@enduml
